force-app/main/default/objects/Rental__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Book record for this rental</description>
    <label>Book</label>
    <referenceTo>Book_c__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>