force-app/main/default/objects/Rental__c/fields/Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Date__c</fullName>
    <label>Rent Date</label>
    <type>Date</type>
</CustomField>