force-app/main/default/objects/Rental__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Student who borrowed the book</description>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>