force-app/main/default/objects/Rental__c/validationRules/Require_Book_and_Student.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Book_and_Student</fullName>
    <active>true</active>
    <description>Prevent saving Rental without Book or Student</description>
    <errorConditionFormula>OR( 
ISBLANK(Book__c ),ISBLANK( Student__c )
)</errorConditionFormula>
    <errorMessage>Both Book and Student are required before saving a Rental</errorMessage>
</ValidationRule>